fix(qodana): sync goldens + python/php template fixes
Regenerate java/python/php goldens to match the Qodana-warning template
fixes (java @Serial/NO_BODY landed in d5f4afe0 without goldens), add the
python value_serializer unbound-var init, and declare ext-zlib in the php
composer template (gzdecode/gzuncompress are used unconditionally).